--- a/src/404.md
+++ b/src/404.md
@@ -1,7 +1,7 @@
 ---
 title: 404 Error
-headerbgcolor: indigo-900
-headertextcolor: white
+headerBgColor: indigo-900
+headerTextColor: white
 layout: layouts/404.njk
 permalink: 404.html
 ---
